Stop rubberband-scrolling on iOS Safari

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,6 +17,7 @@ html, body {
   overflow: hidden;
   font-size: 16px;
   font-family: $default-font;
+  position: fixed;
 }
 
 .invisible {
